Initial push of full parcel tracking app

--- a/index.html
+++ b/index.html
@@ -1,148 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parcel Tracking - SIM987654321</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f4f4;
-      padding: 30px;
-      color: #333;
-    }
-    h1, h2 {
-      color: #2c3e50;
-    }
-    .section {
-      margin-bottom: 30px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: #fff;
-    }
-    th, td {
-      padding: 12px;
-      border: 1px solid #ccc;
-      text-align: left;
-    }
-    th {
-      background-color: #ecf0f1;
-    }
-    .alert {
-      background-color: #ffeaa7;
-      border-left: 5px solid #fdcb6e;
-      padding: 15px;
-      margin-top: 20px;
-      font-weight: bold;
-      opacity: 0;
-    }
-    .fade-in {
-      animation: fadeIn 1s forwards;
-    }
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-    .progress-bar {
-      width: 100%;
-      background-color: #f0f0f0;
-      margin: 20px 0;
-      border-radius: 10px;
-      overflow: hidden;
-      height: 18px;
-    }
-    .progress {
-      width: 0%;
-      height: 100%;
-      background-color: #2ecc71;
-      transition: width 1s ease-in-out;
-    }
-    .support-btn {
-      background-color: #3498db;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-    .support-btn:hover {
-      background-color: #2980b9;
-    }
-    @media (max-width: 768px) {
-      table {
-        display: block;
-        overflow-x: auto;
-      }
-      .section {
-        padding: 15px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h1>Parcel Force International Courier</h1>
-
-  <div class="section">
-    <h2>Tracking Number: SIM987654321</h2>
-
-    <div class="progress-bar" aria-hidden="true">
-      <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-
-    <p><strong>Sender:</strong> David Danforth Callaghan (UK)</p>
-    <p><strong>Receiver:</strong> Gloria Malatsi Chisenga</p>
-    <p><strong>Address:</strong> Plot 8844, Khama Crescent Road, Gaborone, Botswana</p>
-    <p><strong>Phone:</strong> +267 71879689</p>
-    <p><strong>Email:</strong> maglotto2001@gmail.com</p>
-    <p><strong>Estimated Delivery:</strong> 07 Nov 2025 (Subject to customs clearance)</p>
-  </div>
-
-  <div class="section">
-    <h2>Parcel Status</h2>
-    <table>
-      <tr><th>Date & Time</th><th>Status</th><th>Location</th><th>Details</th></tr>
-      <tr><td>04 Nov 2025, 10:15</td><td>Parcel picked up</td><td>London, UK</td><td>Collected from sender</td></tr>
-      <tr><td>04 Nov 2025, 14:45</td><td>Departed facility</td><td>Heathrow Airport</td><td>Flight to Johannesburg</td></tr>
-      <tr><td>05 Nov 2025, 06:30</td><td>Arrived at hub</td><td>Johannesburg, ZA</td><td>Customs clearance in progress</td></tr>
-      <tr><td>06 Nov 2025, 10:00</td><td>Pending transit</td><td>Johannesburg, ZA</td><td>Awaiting customs and delivery fee payment</td></tr>
-    </table>
-
-    <div class="alert" role="status" aria-live="polite">
-      ⚠ Customs and delivery fee must be paid before parcel can proceed to Botswana.
-    </div>
-
-    <button class="support-btn" id="supportBtn">Contact Support</button>
-  </div>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const alertBox = document.querySelector(".alert");
-      setTimeout(() => {
-        alertBox.classList.add("fade-in");
-      }, 500);
-
-      const progress = document.querySelector('.progress');
-      const rows = Array.from(document.querySelectorAll('table tr')).slice(1);
-      const lastStatus = rows.length ? rows[rows.length - 1].cells[1].textContent.trim().toLowerCase() : '';
-      const map = {
-        'parcel picked up': 25,
-        'departed facility': 50,
-        'arrived at hub': 75,
-        'pending transit': 75,
-        'delivered': 100
-      };
-      const pct = map[lastStatus] || 50;
-      setTimeout(() => progress.style.width = pct + '%', 600);
-
-      const supportBtn = document.getElementById('supportBtn');
-      supportBtn.addEventListener('click', () => {
-        const subject = encodeURIComponent('Support request for SIM987654321');
-        const body = encodeURIComponent('Please assist with customs/delivery fee guidance for tracking number SIM987654321.');
-        window.location.href = `mailto:support@parcelforce.example?subject=${subject}&body=${body}`;
-      });
-    });
-  </script>
-</body>
+<html>
+  <head>
+    <title>ParcelForce Tracker</title>
+  </head>
+  <body>
+    <h1>Welcome to ParcelForce</h1>
+    <p>Real-time tracking coming soon.</p>
+  </body>
 </html>
