--- a/index.html
+++ b/index.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>ParcelForce Tracker</title>
-  </head>
-  <body>
-    <h1>Welcome to ParcelForce</h1>
-    <p>Real-time tracking coming soon.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ParcelForce</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    :root {
+      --bg-color: #121212;
+      --text-color: #f0f0f0;
+      --accent-color: #007bff;
+      --button-hover: #0056b3;
+    }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+    img.logo {
+      width: 120px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+    }
+    h1 {
+      font-size: 2.8em;
+      margin-bottom: 0.5em;
+    }
+    p {
+      font-size: 1.2em;
+      margin-bottom: 1.5em;
+    }
+    a.button {
+      display: inline-block;
+      padding: 12px 24px;
+      background-color: var(--accent-color);
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      margin: 8px;
+      transition: background-color 0.3s ease;
+    }
+    a.button:hover {
+      background-color: var(--button-hover);
+    }
+  </style>
+</head>
+<body>
+  <img src="logo.png.jpg" alt="ParcelForce Logo" class="logo">
+  <h1>Welcome to ParcelForce</h1>
+  <p>Your parcel is in good hands.<br>Real-time tracking coming soon.</p>
+  <a href="track.html" class="button">Track Your Parcel</a>
+  <a href="https://wa.me/447000000000?text=Hi%20ParcelForce%2C%20I%20have%20a%20question%20about%20my%20parcel." class="button" target="_blank">Contact via WhatsApp</a>
+</body>
 </html>
+
