--- a/track.html
+++ b/track.html
@@ -47,7 +47,7 @@
     .progress {
       background-color: #0078D4;
       height: 100%;
-      width: 60%;
+      width: 33%;
       border-radius: 5px;
     }
 
@@ -115,7 +115,7 @@
     <h3>Parcel Journey</h3>
     <div class="progress-container">
       <div class="progress-step active">📦 Picked Up</div>
-      <div class="progress-step active">🚚 In Transit</div>
+      <div class="progress-step">🚚 In Transit</div>
       <div class="progress-step">🏁 Delivered</div>
     </div>
 
