--- a/admin.html
+++ b/admin.html
@@ -2,61 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Admin Dashboard</title>
+  <title>ParcelForce Admin Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
   <script type="module" src="admin.js"></script>
-  <script type="module">
-    import { db } from './firebase.js';
-    import { ref, onValue } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js";
-
-    window.loadParcels = function () {
-      const list = document.getElementById('parcelList');
-      list.innerHTML = 'Loading parcels...';
-
-      const parcelsRef = ref(db, 'parcels');
-      onValue(parcelsRef, (snapshot) => {
-        list.innerHTML = '';
-        if (!snapshot.exists()) {
-          list.innerHTML = '<p>No parcels found.</p>';
-          return;
-        }
-
-        const data = snapshot.val();
-        Object.entries(data).forEach(([tracking, parcel]) => {
-          const item = document.createElement('div');
-          item.style.borderBottom = '1px solid #ccc';
-          item.style.padding = '10px 0';
-          item.innerHTML = `
-            <strong>${tracking}</strong><br>
-            ${parcel.sender} → ${parcel.receiver}<br>
-            Status: ${parcel.status?.[parcel.status.length - 1]?.status || 'Unknown'}<br>
-            <button onclick="alert(JSON.stringify(${JSON.stringify(parcel)}, null, 2))">View Details</button>
-          `;
-          list.appendChild(item);
-        });
-      });
-    };
-  </script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       padding: 20px;
       background: #f4f4f4;
     }
+
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    header h1 {
+      color: #d32f2f;
+    }
+
     .form-section, .dashboard-section {
       background: #fff;
       padding: 20px;
       border-radius: 8px;
-      max-width: 600px;
+      max-width: 700px;
       margin: 20px auto;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    input, textarea {
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    input, select, textarea {
       width: 100%;
       padding: 10px;
-      margin-bottom: 10px;
       border-radius: 5px;
       border: 1px solid #ccc;
+      font-size: 1em;
     }
+
     button {
       padding: 10px 15px;
       background-color: #0078D4;
@@ -66,72 +52,120 @@
       cursor: pointer;
       margin-right: 10px;
     }
+
     button:hover {
       background-color: #005A9E;
     }
+
     #feedback, #loading {
       margin-top: 10px;
       font-weight: bold;
       color: #2c3e50;
     }
-    #authGate {
-      text-align: center;
-      margin-top: 100px;
+
+    .section-title {
+      margin-bottom: 10px;
+      color: #2c3e50;
     }
   </style>
 </head>
 <body>
 
-  <div id="authGate">
-    <h2>Admin Access</h2>
-    <input type="password" id="adminPass" placeholder="Enter admin password" />
-    <br><br>
-    <button onclick="checkAccess()">Enter Dashboard</button>
-    <p id="authFeedback"></p>
+  <header>
+    <h1>📦 ParcelForce Admin Panel</h1>
+    <p>Manage and update parcel tracking data in real time.</p>
+  </header>
+
+  <div class="dashboard-section">
+    <h2 class="section-title">Submitted Parcels</h2>
+    <button onclick="loadParcels()">🔄 Refresh List</button>
+    <div id="parcelList" style="margin-top: 20px;"></div>
   </div>
 
-  <div id="adminContent" style="display:none;">
-    <div class="dashboard-section">
-      <h2>📦 Submitted Parcels</h2>
-      <button onclick="loadParcels()">🔄 Refresh List</button>
-      <div id="parcelList" style="margin-top: 20px;"></div>
-    </div>
+  <div class="form-section">
+    <h2 class="section-title">Add or Update Parcel</h2>
+    <form id="parcelForm" onsubmit="event.preventDefault(); submitParcel();">
+      <!-- Tracking Info -->
+      <div class="form-group">
+        <input type="text" id="trackingNumber" placeholder="Tracking Number" required />
+      </div>
 
-    <div class="form-section">
-      <h2>Add Parcel</h2>
-      <form onsubmit="event.preventDefault(); submitParcel();">
-        <input type="text" id="trackingNumber" placeholder="Tracking Number" aria-label="Tracking Number" />
-        <input type="text" id="sender" placeholder="Sender Name" aria-label="Sender Name" />
-        <input type="text" id="receiver" placeholder="Receiver Name" aria-label="Receiver Name" />
-        <input type="text" id="address" placeholder="Delivery Address" aria-label="Delivery Address" />
-        <input type="text" id="phone" placeholder="Phone Number" aria-label="Phone Number" />
-        <input type="email" id="email" placeholder="Email Address" aria-label="Email Address" />
-        <input type="number" id="deliveryFee" placeholder="Delivery Fee" aria-label="Delivery Fee" />
-        <input type="date" id="estimatedDelivery" placeholder="Estimated Delivery Date" aria-label="Estimated Delivery Date" />
-        <textarea id="status" placeholder="Status updates (one per line: timestamp | location | status | details)" aria-label="Status updates"></textarea>
-        <input type="text" id="latitude" placeholder="Latitude (e.g. -26.2041)" aria-label="Latitude" />
-        <input type="text" id="longitude" placeholder="Longitude (e.g. 28.0473)" aria-label="Longitude" />
-        <button type="submit">Submit Parcel</button>
-        <button type="reset">Clear Form</button>
-      </form>
-      <p id="loading">Submitting parcel...</p>
-      <p id="feedback"></p>
-    </div>
+      <!-- Sender/Receiver -->
+      <div class="form-group">
+        <input type="text" id="sender" placeholder="Sender Name" required />
+        <input type="text" id="receiver" placeholder="Receiver Name" required />
+      </div>
+
+      <div class="form-group">
+        <input type="text" id="address" placeholder="Delivery Address" />
+        <input type="text" id="phone" placeholder="Phone Number" />
+        <input type="email" id="email" placeholder="Email Address" />
+      </div>
+
+      <!-- Delivery Details -->
+      <div class="form-group">
+        <input type="number" id="deliveryFee" placeholder="Delivery Fee" />
+        <input type="date" id="estimatedDelivery" placeholder="Estimated Delivery Date" />
+      </div>
+
+      <!-- Status -->
+      <div class="form-group">
+        <label for="parcelStatus"><strong>Status</strong></label>
+        <select id="parcelStatus">
+          <option value="Picked Up">Picked Up</option>
+          <option value="In Transit">In Transit</option>
+          <option value="Delivered">Delivered</option>
+        </select>
+      </div>
+
+      <!-- Status Log -->
+      <div class="form-group">
+        <textarea id="status" placeholder="Status updates (one per line: timestamp | location | status | details)"></textarea>
+      </div>
+
+      <!-- Location -->
+      <div class="form-group">
+        <input type="text" id="latitude" placeholder="Latitude (e.g. -26.2041)" />
+        <input type="text" id="longitude" placeholder="Longitude (e.g. 28.0473)" />
+      </div>
+
+      <!-- Hidden Timestamp -->
+      <input type="hidden" id="lastUpdated" />
+
+      <!-- Buttons -->
+      <button type="submit">Submit Parcel</button>
+      <button type="reset">Clear Form</button>
+    </form>
+
+    <p id="loading" style="display:none;">Submitting parcel...</p>
+    <p id="feedback"></p>
   </div>
 
   <script>
-    function checkAccess() {
-      const pass = document.getElementById('adminPass').value.trim();
-      const feedback = document.getElementById('authFeedback');
-      if (pass === 'ParcelForce2025') {
-        document.getElementById('authGate').style.display = 'none';
-        document.getElementById('adminContent').style.display = 'block';
-        loadParcels();
-      } else {
-        feedback.style.color = 'red';
-        feedback.textContent = 'Incorrect password. Access denied.';
-      }
+    // Auto-fill timestamp on submit
+    function submitParcel() {
+      const timestamp = new Date().toISOString();
+      document.getElementById('lastUpdated').value = timestamp;
+
+      // You can now collect all form values and push to Firebase or format for JSON
+      // Example: const trackingNumber = document.getElementById('trackingNumber').value;
+
+      document.getElementById('loading').style.display = 'block';
+      document.getElementById('feedback').textContent = '';
+
+      // Simulate success
+      setTimeout(() => {
+        document.getElementById('loading').style.display = 'none';
+        document.getElementById('feedback').textContent = '✅ Parcel submitted successfully.';
+        document.getElementById('parcelForm').reset();
+      }, 1000);
+    }
+
+    function loadParcels() {
+      // Placeholder: Load from Firebase or parcels.json
+      document.getElementById('parcelList').innerHTML = '<p>📦 RB123456789CN — Picked Up at OR Tambo</p>';
     }
   </script>
+
 </body>
 </html>
