--- a/index.html
+++ b/index.html
@@ -3,92 +3,163 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Parcel Tracking</title>
+  <title>Parcel Tracking | ParcelForce</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-  <!-- SEO & Social Preview -->
-  <meta name="description" content="Track your parcel with ParcelForce International Courier. Fast, reliable, and secure." />
-  <meta property="og:title" content="Parcel Tracking | ParcelForce" />
-  <meta property="og:image" content="logo.png.jpg" />
-
   <style>
-    body {
-      --bg-color: #f9f9f9;
-      --text-color: #333;
-      --section-bg: #fff;
-      --input-bg: #fff;
-      --button-bg: #0078D4;
-      --button-hover: #005A9E;
+    :root {
+      --red: #c8102e;
+      --dark: #1f1f1f;
+      --light: #f9f9f9;
+      --gray: #f0f0f0;
+      --white: #fff;
+      --text: #333;
+    }
 
+    body {
+      margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      padding: 20px;
-      background: var(--bg-color);
-      color: var(--text-color);
-      text-align: center;
+      background: var(--light);
+      color: var(--text);
       transition: background 0.3s, color 0.3s;
     }
 
     body.dark-mode {
-      --bg-color: #1f1f1f;
-      --text-color: #f0f0f0;
-      --section-bg: #2c2c2c;
-      --input-bg: #333;
-      --button-bg: #52c41a;
-      --button-hover: #389e0d;
-    }
-
-    .section {
-      background: var(--section-bg);
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    input {
-      padding: 10px;
-      width: 70%;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background: var(--input-bg);
-      color: var(--text-color);
-    }
-
-    button {
-      padding: 10px 15px;
-      background-color: var(--button-bg);
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: var(--button-hover);
-    }
-
-    .logo {
-      width: 100%;
-      height: auto;
-      margin-bottom: 30px;
+      background: var(--dark);
+      color: var(--white);
     }
 
     .toggle-container {
       text-align: right;
-      margin-bottom: 10px;
+      padding: 10px 30px;
+    }
+
+    .banner {
+      background-color: var(--red);
+      color: var(--white);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .banner img {
+      height: 40px;
+      border-radius: 8px;
+    }
+
+    nav a {
+      margin-left: 20px;
+      color: var(--white);
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .section {
+      max-width: 700px;
+      margin: 40px auto;
+      background: var(--white);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      text-align: center;
+    }
+
+    body.dark-mode .section {
+      background: #2c2c2c;
+    }
+
+    input {
+      padding: 10px;
+      width: 80%;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-bottom: 15px;
+      font-size: 16px;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: var(--red);
+      color: var(--white);
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #a50e24;
+    }
+
+    .contact-card {
+      background-color: var(--gray);
+      padding: 20px;
+      border-radius: 10px;
+      margin-top: 20px;
+      text-align: left;
+    }
+
+    body.dark-mode .contact-card {
+      background-color: #2c2c2c;
+      color: var(--white);
+    }
+
+    .contact-card p {
+      margin: 10px 0;
+      font-size: 16px;
     }
 
     .footer {
-      background-color: #f0f4f8;
+      background-color: var(--red);
+      color: var(--white);
       padding: 40px 20px;
+      text-align: center;
       margin-top: 60px;
-      animation: fadeIn 1.5s ease-in;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    .footer img {
+      width: 220px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+      margin-bottom: 20px;
+    }
+
+    .spinner {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border: 3px solid #fff;
+      border-top: 3px solid var(--red);
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+      margin-left: 10px;
+      vertical-align: middle;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
+    @media (max-width: 600px) {
+      .banner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        margin-top: 10px;
+      }
+
+      nav a {
+        display: inline-block;
+        margin: 5px 10px;
+      }
     }
   </style>
 </head>
@@ -100,45 +171,72 @@
     </label>
   </div>
 
-  <div style="text-align: center;">
-    <img src="logo.png.jpg" alt="ParcelForce Logo" style="width: 500px; height: auto; border-radius: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
+  <header class="banner">
+    <img src="logo.png" alt="ParcelForce Logo" />
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About Us</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact Us</a>
+      <a href="auth.html">Login</a>
+      <a href="auth.html">Sign Up</a>
+    </nav>
+  </header>
+
+  <div class="section" id="home">
+    <h2>Track your parcel</h2>
+    <p>Keep tabs on your parcel, enter your tracking number or chat with us if you have any questions.</p>
+    
+    <input type="text" id="trackingInput" placeholder="Enter tracking number" />
+    <br><br>
+    <button onclick="trackItem()">Track Item</button>
+    <div id="spinner" style="display:none;" class="spinner"></div>
   </div>
 
-  <div class="section">
-    <h2>Track Your Parcel</h2>
-    <p>Enter your reference number below:</p>
-    <p style="font-size: 0.9em;">
-      Your parcel number may contain letters and numbers. It can vary in length – 9, 11, 13, 14, 16 or 21 characters.<br>
-      e.g. <strong>'WP1234567'</strong>
-    </p>
-    <input type="text" id="trackingInput" placeholder="Enter tracking number" aria-label="Tracking number input" />
-    <br><br>
-    <button onclick="trackItem()" aria-label="Track parcel">Track Item</button>
+  <div class="section" id="about">
+    <h2>About Us</h2>
+    <p>ParcelForce International Courier is committed to fast, secure, and reliable delivery across borders. We empower clients with real-time tracking, branded invoices, and responsive support.</p>
+  </div>
+
+  <div class="section" id="services">
+    <h2>Services</h2>
+    <p>We offer parcel tracking, QR code integration, branded invoices, client dashboards, and secure authentication — all tailored to your workflow.</p>
+  </div>
+
+  <div class="section" id="contact">
+    <h2>Contact Us</h2>
+    <div class="contact-card">
+      <p>📧 Email: <a href="mailto:Parcel_Force1986@outlook.com">Parcel_Force1986@outlook.com</a></p>
+      <p>💬 WhatsApp: <a href="https://wa.me/27633373857" target="_blank">+27 63 337 3857</a></p>
+    </div>
   </div>
 
   <div class="footer">
-    <img src="logo.png.jpg" alt="ParcelForce Logo" style="width: 280px; height: auto; border-radius: 12px; box-shadow: 0 6px 18px rgba(0,0,0,0.12); margin-bottom: 20px;" />
-    <hr style="margin: 30px auto; width: 80%;" />
-    <p style="font-size: 0.95em;">
-      <strong>ParcelForce International Courier</strong> &copy; 2025. All rights reserved.
-    </p>
-    <p style="font-size: 0.9em;">
-      📧 Email: <a href="mailto:Parcel_Force1986@outlook.com" style="color: #0078D4;">Parcel_Force1986@outlook.com</a><br>
-      💬 WhatsApp: <a href="https://wa.me/27633373857" target="_blank" style="color: #0078D4;">+27 63 337 3857</a>
-    </p>
+    <img src="logo.png" alt="ParcelForce Logo" />
+    <hr style="margin: 30px auto; width: 80%; border-color: #fff;" />
+    <p style="color: #ffffff; font-size: 0.95em;">
+  <strong>ParcelForce International Courier</strong> &copy; 2025. All rights reserved.
+</p>
   </div>
 
   <script>
     function trackItem() {
-      const input = document.getElementById('trackingInput').value.trim();
+      const input = document.getElementById('trackingInput');
+      const value = input.value.trim();
       const pattern = /^[A-Z0-9]{9,21}$/i;
-      if (input && pattern.test(input)) {
-        const button = document.querySelector('button');
+      const button = document.querySelector('button');
+      const spinner = document.getElementById('spinner');
+
+      if (value && pattern.test(value)) {
+        input.style.borderColor = "#ccc";
         button.innerText = "Tracking...";
+        spinner.style.display = "inline-block";
         setTimeout(() => {
-          window.location.href = `track.html?ref=${encodeURIComponent(input)}`;
-        }, 300);
+          window.location.href = `track.html?ref=${encodeURIComponent(value)}`;
+        }, 500);
       } else {
+        input.style.borderColor = "red";
+        input.focus();
         alert("Please enter a valid tracking number.");
       }
     }
@@ -146,6 +244,10 @@
     function toggleDarkMode() {
       document.body.classList.toggle('dark-mode');
     }
+
+    document.getElementById('trackingInput').addEventListener('input', () => {
+      document.getElementById('trackingInput').style.borderColor = "#ccc";
+    });
   </script>
 </body>
 </html>
