--- a/receipt.html
+++ b/receipt.html
@@ -20,9 +20,9 @@
 
     <div class="section">
       <h3>Bill To</h3>
-      <div class="field"><span class="label">Name:</span> <span id="recipientName">Estelle Darcy</span></div>
-      <div class="field"><span class="label">Contact:</span> <span id="recipientContact">+123-456-7890</span></div>
-      <div class="field"><span class="label">Address:</span> <span id="recipientAddress">123 Anywhere St., Any City</span></div>
+      <div class="field"><span class="label">Name:</span> <span id="recipientName">Ellen Tshabalala</span></div>
+      <div class="field"><span class="label">Contact:</span> <span id="recipientContact">+27 74 654 92 72</span></div>
+      <div class="field"><span class="label">Address:</span> <span id="recipientAddress">210 Magdalena Willers Street, Lilnerpark, Pretoria, 0186</span></div>
     </div>
 
     <div class="section">
