--- a/track.html
+++ b/track.html
@@ -128,14 +128,16 @@
       <label><input type="checkbox" id="revealInfo" onchange="toggleInfo()" aria-label="Toggle recipient details" /> Show recipient details</label>
     </div>
     <div id="recipientInfo" style="display: none;">
-      <p><strong>Sender:</strong> Pascal William</p>
-      <p><strong>Receiver:</strong> Philile Nkumbe</p>
-      <p><strong>Address:</strong> Katlehong Goba section 131</p>
-      <p><strong>Phone:</strong> 0716173903</p>
-      <p><strong>Email:</strong> <!-- optional --></p>
+      <p><strong>Sender:</strong> Williams Andrew</p>
+      <p><strong>Phone:</strong> +44 7349 554526</p>
+
+      <p><strong>Receiver:</strong> Doreen Debra van der Merwe</p>
+      <p><strong>Address:</strong> Castle Gate Office Block, VDT Attorneys, 
+         C/o Solomon Mahlangu and Van Ryneveld, Waterkloofriff, Pretoria</p>
+      <p><strong>Phone:</strong> 0611470840</p>
+      <p><strong>Email:</strong> doreenm@vdt.co.za</p>
     </div>
 
-    <p><strong>Delivery Fee:</strong> R2500</p>
     <p><strong>Estimated Delivery:</strong> 2025-11-14</p>
 
     <h3>Status Updates</h3>
@@ -144,7 +146,7 @@
     </ul>
 
     <div class="alert">
-      ⚠ Customs and delivery fee of <strong>R2500</strong> must be paid before parcel can proceed for Delivery
+      ⚠ Customs and delivery fee must be paid before parcel can proceed for Delivery
     </div>
 
     <button class="support-btn" onclick="window.location.href='index.html'" aria-label="Back to home">🔙 Back to Home</button>
