--- a/PF557690344CN/index.html
+++ b/PF557690344CN/index.html
@@ -1,9 +1,12 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ParcelForce | Tracker</title>
+  <title>ParcelForce | Live Tracker</title>
 
   <!-- Leaflet CSS/JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -13,48 +16,92 @@
   <script defer src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/build/qrcode.min.js"></script>
 
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background: #f4f6fb; margin: 0; padding: 20px; }
-    .section { background: #fff; border-radius: 16px; padding: 30px; max-width: 900px; margin: 20px auto; box-shadow: 0 10px 40px rgba(0,0,0,0.1); }
-    h2 { text-align: center; color: #c8102e; }
-    h3 { margin-top: 24px; color: #c8102e; border-bottom: 2px solid #c8102e; padding-bottom: 8px; }
+    :root {
+      --primary: #c8102e;
+      --bg: #f4f6fb;
+      --text: #2c3e50;
+      --card: #fff;
+    }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: var(--bg);
+      margin: 0;
+      padding: 20px;
+      color: var(--text);
+    }
+    .section {
+      background: var(--card);
+      border-radius: 16px;
+      padding: 30px;
+      max-width: 900px;
+      margin: 20px auto;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.1);
+    }
+    h2 { text-align: center; color: var(--primary); }
+    h3 { margin-top: 24px; color: var(--primary); border-bottom: 2px solid var(--primary); padding-bottom: 8px; }
+    p strong { color: var(--primary); }
+
     .progress-bar { background: #e0e0e0; border-radius: 20px; height: 20px; margin: 16px 0; overflow: hidden; }
-    .progress { background: linear-gradient(90deg, #c8102e, #ff4d6d); height: 100%; width: 33%; transition: width 0.6s ease; border-radius: 20px; }
+    .progress { background: linear-gradient(90deg, var(--primary), #ff4d6d); height: 100%; width: 66%; transition: width 0.6s ease; border-radius: 20px; }
+
+    .progress-container { display: flex; gap: 12px; margin: 16px 0; }
     .progress-step { flex: 1; text-align: center; font-weight: 600; color: #777; }
-    .progress-step.active { color: #c8102e; }
+    .progress-step.active { color: var(--primary); transform: scale(1.02); }
+
     .status-list { list-style: none; padding: 0; }
-    .status-list li { background: #f9f9f9; padding: 12px; border-radius: 8px; border-left: 4px solid #c8102e; margin: 10px 0; }
+    .status-list li { background: #f9f9f9; padding: 12px; border-radius: 8px; border-left: 4px solid var(--primary); margin: 10px 0; }
+
+    .privacy-toggle { text-align: center; margin: 16px 0; }
     #recipientInfo { display: none; background: #f9f9f9; padding: 12px; border-radius: 8px; }
-    .alert { background: #fff3cd; color: #856404; padding: 12px; border-radius: 8px; border-left: 4px solid #c8102e; text-align: center; }
+
+    .alert { background: #fff3cd; color: #856404; padding: 12px; border-radius: 8px; border-left: 4px solid var(--primary); text-align: center; }
+
+    .support-btn { background: var(--primary); color: #fff; border: none; padding: 10px 16px; border-radius: 8px; cursor: pointer; margin: 6px 4px; font-weight: 600; }
+    .support-btn:hover { background: #a00d26; }
+
     #map { height: 350px; border-radius: 12px; margin-top: 12px; }
     #qrCodeContainer { text-align: center; margin-top: 16px; }
   </style>
 </head>
 <body>
   <div class="section">
-    <h2>Parcel Tracking</h2>
-    <p><strong>Last Updated:</strong> <span id="lastUpdated"></span></p>
+    <h2 id="trackingNumber">📦 Tracking Number: PF557690344CN</h2>
+    <p><strong>Last Updated:</strong> <span id="lastUpdated">2025-11-24 13:15</span></p>
 
     <div class="progress-bar"><div class="progress" id="progressFill"></div></div>
 
     <h3>Parcel journey</h3>
     <div class="progress-container">
-      <div class="progress-step" id="step1"></div>
-      <div class="progress-step" id="step2"></div>
-      <div class="progress-step" id="step3"></div>
+      <div class="progress-step" id="step1">Picked Up (UK — 04/11/2025)</div>
+      <div class="progress-step" id="step2">Arrived in South Africa — 24/11/2025</div>
+      <div class="progress-step" id="step3">Delivered (Expected 25/11/2025)</div>
     </div>
 
-    <div>
+    <div class="privacy-toggle">
       <label><input type="checkbox" id="revealInfo" /> Show recipient details</label>
     </div>
 
-    <div id="recipientInfo"></div>
+    <div id="recipientInfo">
+      <p><strong>Sender:</strong> Woods Loan Office</p>
+      <p><strong>Phone:</strong> ‪+15873288371‬</p>
+      <p><strong>Address:</strong> 1736 Atlantic Ave, Atlantic City, NJ 08401, United States</p>
+      <p><strong>Receiver:</strong> Ella Irene Pelling</p>
+      <p><strong>Phone:</strong> ‪+447856968957‬</p>
+      <p><strong>Home Address:</strong> 35, Ringley Road, Horsham, West Sussex RH12 4AS England</p>
+    </div>
+
+    <p><strong>Estimated Delivery:</strong> 2025-11-25</p>
 
     <h3>Status updates</h3>
     <ul class="status-list">
-      <li id="checkpoint"></li>
+      <li><strong>Last Checkpoint:</strong> Johannesburg OR Tambo Airport — Arrived 24/11/2025</li>
     </ul>
 
-    <div class="alert" id="alertBox"></div>
+    <div class="alert">⚠ Parcel is on hold. Commercial Invoice/Customs Declaration must be paid before delivery can be completed to your home address.</div>
+
+    <button class="support-btn" onclick="window.location.href='../index.html'">🔙 Back to Home</button>
+    <button class="support-btn" onclick="window.open('https://wa.me/27633373857', '_blank')">WhatsApp Support</button>
+    <button class="support-btn" onclick="alert('Redirecting to secure payment portal...')">Pay Customs Fee</button>
 
     <h3>Live map</h3>
     <div id="map"></div>
@@ -72,93 +119,38 @@
         info.style.display = toggle.checked ? 'block' : 'none';
       });
 
-      // Get tracking reference from URL
-      const params = new URLSearchParams(window.location.search);
-      const ref = params.get('ref');
+      // Progress bar logic
+      const today = new Date("2025-11-24");
+      const step1Date = new Date("2025-11-04");
+      const step2Date = new Date("2025-11-24");
+      const step3Date = new Date("2025-11-25");
+      let width = 33;
+      if (today >= step2Date && today < step3Date) {
+        width = 66;
+        document.getElementById('step2').classList.add('active');
+      } else if (today >= step3Date) {
+        width = 100;
+        document.getElementById('step3').classList.add('active');
+      } else {
+        document.getElementById('step1').classList.add('active');
+      }
+      document.getElementById('progressFill').style.width = width + '%';
 
-      // Define parcels
-      const parcels = {
-        "RB123456789CN": {
-          lastUpdated: "2025-11-24 08:18",
-          steps: [
-            "Picked Up (UK — 22/11/2025)",
-            "Arrived in South Africa — 24/11/2025",
-            "Delivered (Expected 25/11/2025)"
-          ],
-          checkpoint: "Johannesburg OR Tambo Airport — Arrived 24/11/2025",
-          recipient: {
-            name: "Doreen Debra van der Merwe",
-            phone: "0611470840",
-            email: "doreenm@vdt.co.za",
-            address: "Castle Gate Office Block, VDT Attorneys, Pretoria"
-          },
-          sender: { name: "Williams Andrew", phone: "+44 7349 554526" },
-          alert: ""
-        },
-        "PF987654321UK": {
-          lastUpdated: "2025-11-24 09:45",
-          steps: [
-            "Picked Up (UK — 23/11/2025)",
-            "Arrived in Cape Town — 24/11/2025",
-            "Delivered (Expected 26/11/2025)"
-          ],
-          checkpoint: "Cape Town International Airport — Arrived 24/11/2025",
-          recipient: {
-            name: "Ellen Tshabalala",
-            phone: "+27 74 654 9272",
-            email: "ellen@example.com",
-            address: "210 Magdalena Willers Street, Lilnerpark, Pretoria"
-          },
-          sender: { name: "David Callaghan", phone: "+1 954 264 4309" },
-          alert: ""
-        },
-        "PF557690344CN": {
-          lastUpdated: "2025-11-24 13:15",
-          steps: [
-            "Picked Up (UK — 04/11/2025)",
-            "Arrived in South Africa — 24/11/2025",
-            "Delivered (Expected 25/11/2025)"
-          ],
-          checkpoint: "Johannesburg OR Tambo Airport — Arrived 24/11/2025",
-          recipient: {
-            name: "Ella Irene Pelling",
-            phone: "‪+447856968957‬",
-            email: "N/A",
-            address: "35, Ringley Road, Horsham, West Sussex RH12 4AS England"
-          },
-          sender: {
-            name: "Woods Loan Office",
-            phone: "‪+15873288371‬"
-          },
-          alert: "⚠ Parcel is on hold. Commercial Invoice/Customs Declaration must be paid before delivery can be completed."
-        }
-      };
+      // Initialize Leaflet map (Johannesburg OR Tambo)
+      const map = L.map('map').setView([-26.1392, 28.2460], 10);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+      }).addTo(map);
+      L.marker([-26.1392, 28.2460]).addTo(map);
 
-      // Load parcel data
-      const parcel = parcels[ref];
-      if (parcel) {
-        document.getElementById("lastUpdated").textContent = parcel.lastUpdated;
-        document.getElementById("step1").textContent = parcel.steps[0];
-        document.getElementById("step2").textContent = parcel.steps[1];
-        document.getElementById("step3").textContent = parcel.steps[2];
-        document.getElementById("checkpoint").textContent = `Last Checkpoint: ${parcel.checkpoint}`;
-        document.getElementById("recipientInfo").innerHTML = `
-          <p><strong>Sender:</strong> ${parcel.sender.name}</p>
-          <p><strong>Phone:</strong> ${parcel.sender.phone}</p>
-          <p><strong>Receiver:</strong> ${parcel.recipient.name}</p>
-          <p><strong>Address:</strong> ${parcel.recipient.address}</p>
-          <p><strong>Phone:</strong> ${parcel.recipient.phone}</p>
-          <p><strong>Email:</strong> ${parcel.recipient.email}</p>
-        `;
-        document.getElementById("alertBox").textContent = parcel.alert;
-
-        // Progress bar logic
-        const today = new Date("2025-11-24");
-        const step1Date = new Date("2025-11-04");
-        const step2Date = new Date("2025-11-24");
-        const step3Date = new Date("2025-11-25");
-        let width = 33;
-        if (today >= step2Date && today < step3Date) {
-          width = 66;
-          document.getElementById('step2').classList.add('active');
-        } else if (today >= step3Date) {
+      // QR code render
+      const url = `https://parcel-force.github.io/parcelforce-site/PF557690344CN/`;
+      const canvas = document.createElement('canvas');
+      QRCode.toCanvas(canvas, url, (err) => {
+        if (err) console.error(err);
+        document.getElementById('qrCodeContainer').appendChild(canvas);
+      });
+    });
+  </script>
+</body>
+</html>
