--- a/track.html
+++ b/track.html
@@ -356,6 +356,10 @@
           <div id="currentCheckpoint" class="status-item" aria-live="polite">—</div>
         </div>
 
+        <p>
+  ⚠️ Parcel On Hold: Your parcel is currently being held in transit because the Commercial Invoice / Customs Declaration document has not been provided.  
+</p>
+
         <div class="qr-area" style="margin-top:8px;">
           <h3 style="margin:8px 0 6px 0;color:var(--brand-navy)">QR / Share</h3>
           <div class="qr-canvas" id="qrCodeContainer" aria-hidden="false"></div>
