--- a/track.html
+++ b/track.html
@@ -449,7 +449,7 @@ a:focus, button:focus, input:focus {
 <!-- Main Script -->
 <script>
 (function() {
-  // Sample data
+  // Sample data - FIXED: All tracking numbers now properly inside SAMPLE object
   const SAMPLE = {
     "PF557690344CN": {
       sender: {
@@ -490,30 +490,29 @@ a:focus, button:focus, input:focus {
       checkpoint: "Parcel is currently in international transit",
       coords: [-26.1392, 28.2460],
       status: "in_transit"
+    },
+    "PF99564008CN": {
+      sender: {
+        name: "George Callaghan",
+        address: "103 Notting Hill Gate, Kensington, London W11 3LB",
+        phone: "+357 95 585645"
+      },
+      recipient: {
+        name: "Nicola Chadayan",
+        address: "17 Oxford Road, Bedford Gardens, South Africa",
+        phone: "+27 83 444 5181"
+      },
+      journey: [
+        "Collected — 28 Nov 2025",
+        "Cleared export hub — 01 Dec 2025",
+        "Out for delivery — 02 Dec 2025"
+      ],
+      deliveryDate: "2025-12-02",
+      checkpoint: "Parcel is currently in transit from London to South Africa",
+      coords: [-26.2041, 28.0473],
+      status: "in_transit"
     }
   };
-
-  "PF99564008CN": {
-  sender: {
-    name: "George Callaghan",
-    address: "103 Notting Hill Gate, Kensington, London W11 3LB",
-    phone: "+357 95 585645"
-  },
-  recipient: {
-    name: "Nicola Chadayan",
-    address: "17 Oxford Road, Bedford Gardens, South Africa",
-    phone: "+27 83 444 5181"
-  },
-  journey: [
-    "Collected — 28 Nov 2025",
-    "Cleared export hub — 01 Dec 2025",
-    "Out for delivery — 02 Dec 2025"
-  ],
-  deliveryDate: "2025-12-02",
-  checkpoint: "Parcel is currently in transit from London to South Africa",
-  coords: [-26.2041, 28.0473],
-  status: "in_transit"
-}
 
   // Helper functions
   function qs(id) { return document.getElementById(id); }
